--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,8 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Tests\\App\\": "./tests/src"
+      "Tests\\App\\": "./tests/src",
+      "Tests\\Apps\\API\\": "./tests/apps/api/src"
     }
   },
   "replace": {
