chore: Removing unused API app services.

--- a/apps/api/config/services.yaml
+++ b/apps/api/config/services.yaml
@@ -1,5 +1,6 @@
 imports:
   - { resource: ../../../src/Shared/Infrastructure/Symfony/DependencyInjection/shared_services.yaml }
+  - { resource: ../../../src/Things/Intangibles/Infrastructure/Symfony/DependencyInjection/intangibles_services.yaml }
 parameters:
   app.root_path: '../../..'
   app.app_path: '/apps/api'
