chore: Adding Rector dev dependency.

--- a/.gitignore
+++ b/.gitignore
@@ -289,3 +289,7 @@ compose.override.yml
 /phpunit.xml
 .phpunit.result.cache
 ###< phpunit/phpunit ###
+
+###> phpstan/phpstan ###
+phpstan.neon
+###< phpstan/phpstan ###
