--- a/.gitignore
+++ b/.gitignore
@@ -293,3 +293,8 @@ compose.override.yml
 ###> phpstan/phpstan ###
 phpstan.neon
 ###< phpstan/phpstan ###
+
+###> php-cs-fixer ###
+/tools/php-cs-fixer/vendor/
+/.php-cs-fixer.cache
+###< php-cs-fixer ###
