--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
     "behat/mink-browserkit-driver": "^2",
     "friends-of-behat/mink-extension": "^2",
     "friends-of-behat/symfony-extension": "^2",
-    "rector/rector": "^0.19.2"
+    "rector/rector": "^0.19.2",
+    "vimeo/psalm": "^5.22"
   },
   "config": {
     "allow-plugins": {
