chore: Added some plugins to Psalm.

--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,10 @@
     "friends-of-behat/mink-extension": "^2",
     "friends-of-behat/symfony-extension": "^2",
     "rector/rector": "^0.19.2",
-    "vimeo/psalm": "^5.22"
+    "vimeo/psalm": "^5.22",
+    "psalm/plugin-symfony": "^5.1",
+    "psalm/plugin-phpunit": "^0.18.4",
+    "weirdan/doctrine-psalm-plugin": "^2.9"
   },
   "config": {
     "allow-plugins": {
