--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
     "friends-of-behat/mink-extension": "^2",
     "friends-of-behat/symfony-extension": "^2",
     "rector/rector": "^0.19.2",
+    "phpstan/phpstan": "^1.10",
     "vimeo/psalm": "^5.22",
     "psalm/plugin-symfony": "^5.1",
     "psalm/plugin-phpunit": "^0.18.4",
