chore: Set the PHPStan rule level to minimum, 0.

--- a/phpstan.dist.neon
+++ b/phpstan.dist.neon
@@ -1,8 +1,7 @@
 parameters:
-    level: 6
+    level: 0
     paths:
         - bin/
-        - config/
-        - public/
+        - apps/
         - src/
         - tests/
