chore: Added PHPStan extension installer.

--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
     "friends-of-behat/symfony-extension": "^2",
     "rector/rector": "^0.19.2",
     "phpstan/phpstan": "^1.10",
+    "phpstan/extension-installer": "^1.3",
     "vimeo/psalm": "^5.22",
     "psalm/plugin-symfony": "^5.1",
     "psalm/plugin-phpunit": "^0.18.4",
@@ -48,7 +49,8 @@
     "allow-plugins": {
       "php-http/discovery": true,
       "symfony/flex": true,
-      "symfony/runtime": true
+      "symfony/runtime": true,
+      "phpstan/extension-installer": true
     },
     "sort-packages": false
   },
@@ -75,12 +77,6 @@
     "symfony/polyfill-php81": "*"
   },
   "scripts": {
-    "post-install-cmd": [
-      "@cache-clear"
-    ],
-    "post-update-cmd": [
-      "@cache-clear"
-    ],
     "head-cache-clear": [
       "@php bin/head cache:clear"
     ],
@@ -91,8 +87,11 @@
       "@head-cache-clear",
       "@api-cache-clear"
     ],
-    "psalm": [
-      "./vendor/bin/psalm"
+    "post-install-cmd": [
+      "@cache-clear"
+    ],
+    "post-update-cmd": [
+      "@cache-clear"
     ],
     "auto-scripts": {
       "cache:clear": "symfony-cmd",
@@ -106,6 +105,11 @@
     "symfony": {
       "allow-contrib": false,
       "require": "^7"
+    },
+    "phpstan": {
+      "includes": [
+        "extension.neon"
+      ]
     }
   }
 }
