--- a/composer.json
+++ b/composer.json
@@ -38,13 +38,15 @@
     "friends-of-behat/mink-extension": "^2",
     "friends-of-behat/symfony-extension": "^2",
     "rector/rector": "^0.19.2",
-    "phpstan/phpstan": "^1.10"
+    "phpstan/phpstan": "^1.10",
+    "phpstan/extension-installer": "^1.3"
   },
   "config": {
     "allow-plugins": {
       "php-http/discovery": true,
       "symfony/flex": true,
-      "symfony/runtime": true
+      "symfony/runtime": true,
+      "phpstan/extension-installer": true
     },
     "sort-packages": false
   },
@@ -99,6 +101,11 @@
     "symfony": {
       "allow-contrib": false,
       "require": "^7"
+    },
+    "phpstan": {
+      "includes": [
+        "extension.neon"
+      ]
     }
   }
 }
