--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
     "friends-of-behat/symfony-extension": "^2",
     "rector/rector": "^0.19.2",
     "phpstan/phpstan": "^1.10",
-    "phpstan/extension-installer": "^1.3"
+    "phpstan/extension-installer": "^1.3",
+    "phpstan/phpstan-symfony": "^1.3"
   },
   "config": {
     "allow-plugins": {
