--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
     "rector/rector": "^0.19.2",
     "phpstan/phpstan": "^1.10",
     "phpstan/extension-installer": "^1.3",
+    "phpstan/phpstan-symfony": "^1.3",
     "vimeo/psalm": "^5.22",
     "psalm/plugin-symfony": "^5.1",
     "psalm/plugin-phpunit": "^0.18.4",
