chore: Configured PHPStan Symfony extension.

--- a/phpstan.dist.neon
+++ b/phpstan.dist.neon
@@ -5,3 +5,5 @@ parameters:
         - apps/
         - src/
         - tests/
+    symfony:
+        containerXmlPath: var/cache/head/dev/App_Apps_Head_KernelDevDebugContainer.xml
