--- a/phpstan.dist.neon
+++ b/phpstan.dist.neon
@@ -7,3 +7,5 @@ parameters:
         - tests/
     symfony:
         containerXmlPath: var/cache/head/dev/App_Apps_Head_KernelDevDebugContainer.xml
+    doctrine:
+        objectManagerLoader: etc/phpstan/object-manager.php
