--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
     "rector/rector": "^0.19.2",
     "phpstan/phpstan": "^1.10",
     "phpstan/extension-installer": "^1.3",
-    "phpstan/phpstan-symfony": "^1.3"
+    "phpstan/phpstan-symfony": "^1.3",
+    "phpstan/phpstan-doctrine": "^1.3"
   },
   "config": {
     "allow-plugins": {
