--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
     "phpstan/extension-installer": "^1.3",
     "phpstan/phpstan-symfony": "^1.3",
     "phpstan/phpstan-doctrine": "^1.3",
+    "phpstan/phpstan-phpunit": "^1.3",
     "vimeo/psalm": "^5.22",
     "psalm/plugin-symfony": "^5.1",
     "psalm/plugin-phpunit": "^0.18.4",
