--- a/compose.yaml
+++ b/compose.yaml
@@ -18,8 +18,8 @@ services:
             - "8080:8080"
         volumes:
             - .:/app:delegated
-    database:
-        container_name: database
+    sql:
+        container_name: sql
         image: postgres:${POSTGRES_VERSION:-16}-alpine
         environment:
             POSTGRES_DB: ${POSTGRES_DB:-app}
@@ -30,3 +30,12 @@ services:
             - "5432:5432"
         volumes:
             - .docker/pgsql/data:/var/lib/postgresql/data:rw
+    no-sql:
+        container_name: no-sql
+        image: mongo:${MONGO_VERSION:-7}
+        restart: always
+        ports:
+            - "27017:27017"
+        environment:
+            MONGO_INITDB_ROOT_USERNAME: root
+            MONGO_INITDB_ROOT_PASSWORD: root
