chore: Added Google API client package.

--- a/.env
+++ b/.env
@@ -36,3 +36,10 @@ DATABASE_URL="postgresql://root:root@database:5432/app?serverVersion=16&charset=
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
+
+###> google/apiclient ###
+GOOGLE_API_KEY=Temporal(OrNot)Value
+GOOGLE_CLIENT_ID=Temporal(OrNot)Value
+GOOGLE_CLIENT_SECRET=Temporal(OrNot)Value
+GOOGLE_AUTH_CONFIG=%kernel.project_dir%/path/to/file.json
+###< google/apiclient ###
