feat(authorization): Initiated Authorization layer implementation.

--- a/apps/shared/.env
+++ b/apps/shared/.env
@@ -41,5 +41,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 GOOGLE_API_KEY=Temporal(OrNot)Value
 GOOGLE_CLIENT_ID=Temporal(OrNot)Value
 GOOGLE_CLIENT_SECRET=Temporal(OrNot)Value
-GOOGLE_AUTH_CONFIG=%kernel.project_dir%/path/to/file.json
+GOOGLE_AUTH_CONFIG=Temporal(OrNot)Value
 ###< google/apiclient ###
