chore(docker): Update compose.yaml to include env_file for services

--- a/.gitignore
+++ b/.gitignore
@@ -269,6 +269,7 @@ Temporary Items
 
 ###> Docker Compose ###
 compose.override.yml
+/.env.local
 ###< Docker Compose ###
 
 ###> symfony/framework-bundle ###
