feat(GoogleSignIn): Introduce Client interface and GoogleClient implementation with tests

--- a/src/Authorization/SignIn/Infrastructure/Symfony/DependencyInjection/signin_services.yaml
+++ b/src/Authorization/SignIn/Infrastructure/Symfony/DependencyInjection/signin_services.yaml
@@ -6,6 +6,7 @@ services:
         autoconfigure: true
     App\Authorization\SignIn\:
         resource: '%context.root_path%/src/Authorization/SignIn/{Application,Domain,Infrastructure}/*'
-    App\Authorization\SignIn\Infrastructure\SignIn\Providers\Google\GoogleClient:
+    authorization.signin.google.client:
+        class: App\Authorization\SignIn\Infrastructure\SignIn\Providers\Google\GoogleClient
         arguments:
             $config: '%env(json:GOOGLE_AUTH_CONFIG)%'
