feat(GoogleSignIn): Refactor Google authorization classes and introduce Client interface

--- a/src/Authorization/SignIn/Infrastructure/Symfony/DependencyInjection/signin_services.yaml
+++ b/src/Authorization/SignIn/Infrastructure/Symfony/DependencyInjection/signin_services.yaml
@@ -7,6 +7,6 @@ services:
     App\Authorization\SignIn\:
         resource: '%context.root_path%/src/Authorization/SignIn/{Application,Domain,Infrastructure}/*'
     authorization.signin.google.client:
-        class: App\Authorization\SignIn\Infrastructure\SignIn\Providers\Google\GoogleClient
+        class: App\Authorization\SignIn\Infrastructure\Providers\Google\GoogleClient
         arguments:
             $config: '%env(json:GOOGLE_AUTH_CONFIG)%'
