refactor: extract shared kernel to improve reusability across apps

--- a/composer.json
+++ b/composer.json
@@ -65,6 +65,7 @@
     "psr-4": {
       "App\\Apps\\API\\": "./apps/api/src/",
       "App\\Apps\\Head\\": "./apps/head/src/",
+      "App\\Apps\\Shared\\": "./apps/shared/src/",
       "App\\": "./src/"
     }
   },
