--- a/apps/shared/config/packages/messenger.yaml
+++ b/apps/shared/config/packages/messenger.yaml
@@ -9,10 +9,5 @@ framework:
             query.bus:
                 middleware:
                     - validation
-# when@test:
-#    framework:
-#        messenger:
-#            transports:
-#                # replace with your transport name here (e.g., my_transport: 'in-memory://')
-#                # For more Messenger testing tools, see https://github.com/zenstruck/messenger-test
-#                async: 'in-memory://'
+        transports:
+            sync: 'sync://'
